src/app/main/post-card/post-card.component.scss
@import './src/assets/scss/variables';
$cardInteractionsSize: 32px;
$cardInteractionsIcons: 20px;
mat-card {
  height: 100%;
  & mat-card-footer {
    padding: 8px 0;
    background-color: $extraDark;
  }
  & .author {
    padding-top: 5px;
    opacity: .5;
  }
  & .date {
    font-size: .8rem;
    opacity: .5;
  }
}
img, mat-card-title {
  cursor: pointer;
}
.footer {
  display: flex;
  justify-content: space-between;
}
.social, ::ng-deep .mat-menu-content {
  display: flex;
  align-items: center;
  padding-left: 16px;
  button {
    width: $cardInteractionsSize;
    height: $cardInteractionsSize;
    margin-right: $padding-default;
    & ::ng-deep.mat-button-wrapper {
      line-height: $cardInteractionsSize;
      display: flex;
      justify-content: center;
      padding: 0;
    }
    &.telegram {
      background-color: #00bfff;
    }
    &.facebook {
      background-color: #4867aa;
      img {
        width: 24px;
        height: 24px;
      }
    }
  }
  img.icon {
    width: $cardInteractionsIcons;
    height: $cardInteractionsIcons;
  }
}

.info {
  button {
    width: auto;
  }
}

.rate {
  padding-right: $padding-default;
  mat-button-toggle {
    height: $cardInteractionsSize;
    & ::ng-deep.mat-button-toggle-label-content {
      line-height: $cardInteractionsSize;
    }
  }
  .score {
    min-width: 65px;
  }
  .like {
    & mat-icon {
      color: $green;
      transform: rotateZ(-90deg);
    }
  }
  .score {
    color: $white;
  }
  .dislike {
    & mat-icon {
      transform: rotateZ(90deg);
    }
  }
  .like, .dislike {
    opacity: .8;
    transition: all .2s;
    &:hover {
      opacity: 1;
    }
  }
}

::ng-deep .mat-menu-panel {
  display: flex;
  align-items: center;
}

